# MVTec-AD-Industrial-Parts-Defect-Detection

./: .gitignore  README.md  README.zh-CN.md  plan.md  pyproject.toml  requirements.txt  workflow_plan.md
results/: method_comparison.md
src/: __init__.py  check_data.py  compare_methods.py  dataset.py  evaluate.py  explain.py  model.py  patchcore.py  run_patchcore.py  train.py  visualize.py
