[project]
name = "mvtec-defect-detection"
version = "0.1.0"
description = "Industrial parts defect detection experiment using MVTec AD bottle images, OpenCV/PIL preprocessing, and ResNet18 transfer learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "pillow",
    "numpy",
    "matplotlib",
    "tqdm",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
